[package]
name = "agni"
version = "0.1.0"
authors = ["rednithin <reddy.nithinpg@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
actix-web = "*"
actix-files = "*"

log = "0.4"
pretty_env_logger = "0.4"

uuid = {version = "*", features=["v4"]}
bytes = "*"

serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
strong-xml = "*"

pnet = "*"

lru-cache = "*"

roxmltree = "*"

percent-encoding = "*"